--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,9 +60,11 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres-users:5432/keycloak_db
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: postgres
+    volumes:
+      - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
     ports:
       - "8080:8080"
-    command: start-dev
+    command: start-dev --import-realm
     depends_on:
       - postgres-users
     networks:
