--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nats:
     image: nats:latest
@@ -9,6 +7,19 @@ services:
     volumes:
       - ./nats/nats.conf:/etc/nats/nats.conf
     command: ["-c", "/etc/nats/nats.conf"]
+    networks:
+      - codesnap-network
+
+  postgres-keycloak:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: keycloak_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5435:5432"
+    volumes:
+      - postgres-keycloak-data:/var/lib/postgresql/data
     networks:
       - codesnap-network
 
@@ -57,7 +68,7 @@ services:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres-users:5432/keycloak_db
+      KC_DB_URL: jdbc:postgresql://postgres-keycloak:5432/keycloak_db
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: postgres
     volumes:
@@ -66,7 +77,7 @@ services:
       - "8080:8080"
     command: start-dev --import-realm
     depends_on:
-      - postgres-users
+      - postgres-keycloak
     networks:
       - codesnap-network
 
@@ -96,79 +107,15 @@ services:
     networks:
       - codesnap-network
 
-  api-gateway:
-    build: ../codesnap-api-gateway
-    ports:
-      - "5000:5000"
-    environment:
-      NATS_URL: nats://nats:4222
-      KEYCLOAK_URL: http://keycloak:8080
-      PORT: 5000
-    depends_on:
-      - nats
-      - keycloak
-    networks:
-      - codesnap-network
-
-  user-service:
-    build: ../codesnap-user-service
-    environment:
-      NATS_URL: nats://nats:4222
-      DATABASE_URL: postgresql://postgres:postgres@postgres-users:5432/users_db
-    depends_on:
-      - nats
-      - postgres-users
-    networks:
-      - codesnap-network
-
-  exercise-service:
-    build: ../codesnap-exercise-service
-    environment:
-      NATS_URL: nats://nats:4222
-      DATABASE_URL: postgresql://postgres:postgres@postgres-exercises:5432/exercises_db
-    depends_on:
-      - nats
-      - postgres-exercises
-    networks:
-      - codesnap-network
-
-  attempt-service:
-    build: ../codesnap-attempt-service
-    environment:
-      NATS_URL: nats://nats:4222
-      DATABASE_URL: postgresql://postgres:postgres@postgres-attempts:5432/attempts_db
-    depends_on:
-      - nats
-      - postgres-attempts
-    networks:
-      - codesnap-network
-
-  code-execution-service:
-    build: ../codesnap-code-execution-service
-    environment:
-      NATS_URL: nats://nats:4222
-    depends_on:
-      - nats
-    networks:
-      - codesnap-network
-
-  ai-service:
-    build: ../codesnap-ai-service
-    environment:
-      NATS_URL: nats://nats:4222
-      GOOGLE_API_KEY: ${GOOGLE_API_KEY}
-    depends_on:
-      - nats
-    networks:
-      - codesnap-network
-
 volumes:
   postgres-users-data:
   postgres-exercises-data:
   postgres-attempts-data:
+  postgres-keycloak-data:
   prometheus-data:
   grafana-data:
 
 networks:
   codesnap-network:
+    name: shared-codesnap-network
     driver: bridge
