--- a/nats/nats.conf
+++ b/nats/nats.conf
@@ -3,7 +3,11 @@ http_port: 8222
 
 jetstream {
   store_dir: /data/jetstream
+  max_memory_store: 1GB
+  max_file_store: 10GB
 }
+
+http: 8222
 
 debug: false
 trace: false
