--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,8 @@
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
-KEYCLOAK_URL=http://keycloak:8080
-KEYCLOAK_REALM=codesnap
-KEYCLOAK_CLIENT_ID=codesnap-client
+KEYCLOAK_DB_PASSWORD=postgres
 
-NATS_URL=nats://nats:4222
-
-GOOGLE_API_KEY=AIzaSyBl5SmJaxcEI9Y0zE7QgNIFF6wYmiQMAS8
 GRAFANA_ADMIN_PASSWORD=admin
-
-API_GATEWAY_PORT=5000
-USER_SERVICE_PORT=8001
-EXERCISE_SERVICE_PORT=8002
-ATTEMPT_SERVICE_PORT=8003
-CODE_EXECUTION_SERVICE_PORT=8004
-AI_SERVICE_PORT=8005
