--- a/k8s/infrastructure/postgres-keycloak.yaml
+++ b/k8s/infrastructure/postgres-keycloak.yaml
@@ -35,6 +35,13 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgres-storage
+          resources:
+            requests:
+              cpu: "50m"
+              memory: "128Mi"
+            limits:
+              cpu: "200m"
+              memory: "256Mi"
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
