--- a/k8s/infrastructure/keycloak-deployment.yaml
+++ b/k8s/infrastructure/keycloak-deployment.yaml
@@ -17,8 +17,21 @@ spec:
       containers:
         - name: keycloak
           image: quay.io/keycloak/keycloak:latest
-          args: ["start-dev"] # Using dev mode for local simple testing, switch to start in prod
+          args: ["start"]
           env:
+            # --- PATH REVERSION ---
+            - name: KC_HTTP_RELATIVE_PATH
+              value: "/auth"
+            - name: KC_HTTP_ENABLED
+              value: "true"
+            - name: KC_PROXY_HEADERS
+              value: "xforwarded"
+            - name: KC_HOSTNAME
+              value: "3.64.180.31.sslip.io"
+            - name: KC_HOSTNAME_STRICT
+              value: "false"
+
+            # --- DB SETTINGS ---
             - name: KC_DB
               value: postgres
             - name: KC_DB_URL
@@ -33,12 +46,13 @@ spec:
                 secretKeyRef:
                   name: keycloak-db-secret
                   key: password
+
+            # --- CREDENTIALS ---
             - name: KC_BOOTSTRAP_ADMIN_USERNAME
               value: admin
             - name: KC_BOOTSTRAP_ADMIN_PASSWORD
-              value: admin
-            - name: KC_PROXY
-              value: "edge" # Important for Ingress/LoadBalancer
+              value: "Iguana377"
+
             - name: KC_HEALTH_ENABLED
               value: "true"
             - name: KC_METRICS_ENABLED
@@ -47,7 +61,7 @@ spec:
             - containerPort: 8080
           readinessProbe:
             httpGet:
-              path: /health/ready
-              port: 9000
-            initialDelaySeconds: 70
+              path: /auth/health/ready
+              port: 8080
+            initialDelaySeconds: 90
             periodSeconds: 10
