--- a/k8s/infrastructure/keycloak-ingress.yaml
+++ b/k8s/infrastructure/keycloak-ingress.yaml
@@ -2,14 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: keycloak-ingress
-  annotations:
-    # AWS Controller annotations would go here
-    # alb.ingress.kubernetes.io/scheme: internet-facing
-    # alb.ingress.kubernetes.io/target-type: ip
 spec:
-  ingressClassName: alb # or nginx
+  ingressClassName: traefik
   rules:
-    - host: auth.yourdomain.com
+    - host: keycloak.3.64.180.31.sslip.io
       http:
         paths:
           - path: /
