--- a/k8s/observability-outdated/grafana-deployment.yaml
+++ b/k8s/observability-outdated/grafana-deployment.yaml
@@ -31,4 +31,4 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
-  type: LoadBalancer # Access via localhost:3000 locally
+  type: LoadBalancer
