--- a/k8s/infrastructure/keycloak-deployment.yaml
+++ b/k8s/infrastructure/keycloak-deployment.yaml
@@ -16,22 +16,20 @@ spec:
     spec:
       containers:
         - name: keycloak
-          image: quay.io/keycloak/keycloak:latest
+          image: quay.io/keycloak/keycloak:24.0.3
           args: ["start"]
           env:
-            # --- PATH REVERSION ---
             - name: KC_HTTP_RELATIVE_PATH
               value: "/auth"
             - name: KC_HTTP_ENABLED
               value: "true"
-            - name: KC_PROXY_HEADERS
-              value: "xforwarded"
-            - name: KC_HOSTNAME
-              value: "3.64.180.31.sslip.io"
+            - name: KC_PROXY
+              value: "edge"
+            - name: KC_HOSTNAME_URL
+              value: "https://3.64.180.31.sslip.io/auth"
             - name: KC_HOSTNAME_STRICT
               value: "false"
 
-            # --- DB SETTINGS ---
             - name: KC_DB
               value: postgres
             - name: KC_DB_URL
@@ -47,21 +45,29 @@ spec:
                   name: keycloak-db-secret
                   key: password
 
-            # --- CREDENTIALS ---
-            - name: KC_BOOTSTRAP_ADMIN_USERNAME
+            - name: KEYCLOAK_ADMIN
               value: admin
-            - name: KC_BOOTSTRAP_ADMIN_PASSWORD
+            - name: KEYCLOAK_ADMIN_PASSWORD
               value: "Iguana377"
 
-            - name: KC_HEALTH_ENABLED
-              value: "true"
             - name: KC_METRICS_ENABLED
               value: "true"
+            - name: KC_HEALTH_ENABLED
+              value: "true"
+
           ports:
             - containerPort: 8080
+
+          startupProbe:
+            httpGet:
+              path: /auth/health/started
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 30
+
           readinessProbe:
             httpGet:
               path: /auth/health/ready
               port: 8080
-            initialDelaySeconds: 90
             periodSeconds: 10
